# LLM

./: Bert_MC_LLM_pipeline.ipynb  README.md  bert_multiclass_ft_pipeline.ipynb  bert_multiclass_pipeline.ipynb  bert_multiclass_pipeline_final.ipynb
bert_classifier_project/: .gitignore  main.py  pyproject.toml  requirements.txt
bert_classifier_project/src/bert_classifier/: __init__.py  cli.py  config.py  data.py  pipeline.py  trainer.py  visualizer.py
bert_classifier_project/tests/: conftest.py  test_cli.py  test_config.py
