[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bert-classifier"
version = "0.1.0"
description = "Fine-tune BERT for multi-class text classification."
requires-python = ">=3.9"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "accelerate",
    "evaluate",
    "scikit-learn",
    "numpy",
    "pandas",
    "openpyxl",
    "matplotlib",
    "seaborn",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
bert-classifier = "bert_classifier.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
